fix spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,18 +15,18 @@
   --font-size-md: 1.5rem;
   --font-size-lg: 2rem;
   --font-size-xl: 2.5rem;
-  --font-size-2xl: 3rem;
-  --font-size-3xl: 4rem;
+  --font-size-xxl: 3rem;
+  --font-size-xxxl: 4rem;
   /* SPACING */
-  --space-xs: 0.25rem;
-  --space-sm: 0.5rem;
-  --space-md: 1rem;
-  --space-lg: 1.25rem;
-  --space-xl: 2rem;
-  --space-2xl: 3rem;
-  --space-3xl: 4rem;
-  --space-4xl: 5rem;
-  --space-5xl: 6rem;
+  --space-xxs: 0.25rem;
+  --space-xs: 0.5rem;
+  --space-sm: 1rem;
+  --space-md: 1.25rem;
+  --space-lg: 2rem;
+  --space-xl: 3rem;
+  --space-xxl: 4rem;
+  --space-xxxl: 5rem;
+  --space-xxxxl: 6rem;
 }
 
 html,
@@ -42,6 +42,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-size: inherit;
 }
 
 * {
@@ -56,7 +57,7 @@ ol {
 }
 
 h1 {
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-lg);
   max-width: 15ch;
 }
 
@@ -78,7 +79,7 @@ p {
     font-size: var(--font-size-xl);
   }
   h2 {
-    font-size: var(--font-size-3xl);
+    font-size: var(--font-size-xxxl);
   }
   p {
     font-size: var(--font-size-md);
